--- a/src/footer.haml
+++ b/src/footer.haml
@@ -17,8 +17,8 @@
 %script(src="assets/scripts/main.js")
 
 :javascript
-  if (page == "index") {
-    //geo_location();
+  if (page == "map") {
+    geo_location();
     resizeSidebar();
   };
 
