--- a/src/assets/stylesheets/internal.scss
+++ b/src/assets/stylesheets/internal.scss
@@ -60,6 +60,7 @@ $dark_gray: #666;
   background-color: $black;
   width: 100%;
   height: 70px;
+  float: left;
 }
 
 .logo {
@@ -67,7 +68,8 @@ $dark_gray: #666;
   float: left;
 
   img {
-    height: 70px;
+    height: 50px;
+    margin-top: 10px;
   }
 }
 
