--- a/src/assets/stylesheets/style.scss
+++ b/src/assets/stylesheets/style.scss
@@ -225,8 +225,6 @@ section {
   perspective: 1000;
 }
 
-
-
 .list__item {
   height: 204px;
   width: 30%;
@@ -288,7 +286,6 @@ section {
 \*----------------------------------------------------------------------------*/
 .versions {
   background: #fff url('../images/site_versions.jpg') bottom center scroll no-repeat;
-  // height: 700px;
 
   h3 {
     color: $light_blue;
@@ -430,10 +427,12 @@ section {
 \*----------------------------------------------------------------------------*/
 footer {
   background-color: $black;
-  padding-bottom: 40px;
+  padding: 40px 0;
+  float: left;
+  width: 100%;
 
   .logo img {
-    height: 110px;
+    height: 70px;
   }
 
   .logo,
@@ -536,8 +535,6 @@ footer {
     }
   }
 
-
-
   .intro {
     
     .text {
@@ -555,32 +552,7 @@ footer {
       background-color: red;
       width: 100%;
     }
-
-    // .item {
-    //   height: 170px;
-    //   width: 100%;
-    //   margin: 10px;
-    //   padding: 15px;
-
-    //   .icon {
-    //     margin-bottom: 10px;
-    //   }
-
-    //   .text_hover {
-    //     font-size: 18px;
-    //     line-height: 22px;
-    //   }
-
-    //   .more, .minus {
-    //     position: absolute;
-    //     bottom: 0;
-    //     right: 0;
-    //     margin: 0;
-    //     cursor: pointer;
-    //   }
-    // }
   }
-
 
   footer {
     .logo,
