--- a/src/index.haml
+++ b/src/index.haml
@@ -181,10 +181,7 @@
             %a(href="http://www.eokoe.com") Eokoe 
              Project
 
-<!-- jQuery -->
-%script(src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js")
-:javascript
-  window.jQuery || document.write('<script src="assets/scripts/vendor/jquery-1.11.3.min.js")<\/script>')
+//=include scripts.haml
 
 :javascript
   $(".list__item .item__front").click(function() {
