Fix assets's path

--- a/src/dashboard.jade
+++ b/src/dashboard.jade
@@ -36,7 +36,7 @@ include header.jade
 
       a(class="btn btn-lg btn-success btn-ring" href="#" role="button") Ring ma' bell
 
-block scripts
+include scripts.jade
 
 script.
   geo_location();
