Add success/fail to Password's recovery

--- a/src/password_recovery.jade
+++ b/src/password_recovery.jade
@@ -16,6 +16,12 @@ section.main
         .form__field
           button.form__button(type="button" class="btn btn-lg btn-block" onclick="passwordRecovery()") Enviar
 
+        .form__field.success
+          p Email enviado com sucesso. <br />Cheque a sua pasta de SPAM.
+
+        .form__field.fail
+          p Ocorreu um problema ao enviar sua requisição. <br/ > Tente novamente em alguns minutos.
+
 include scripts.jade
 
 script(src="scripts/login/login.js")
