Add session to Login

--- a/src/dashboard/index.jade
+++ b/src/dashboard/index.jade
@@ -44,6 +44,8 @@ include ../layout/header.jade
 
 include ../scripts.jade
 
+script(src="/scripts/dashboard/dashboard.js")
+
 script.
   geo_location();  
   resizeSidebar();
