--- a/src/scripts.jade
+++ b/src/scripts.jade
@@ -1,8 +1,8 @@
 //- Scripts
 
 //- Angular
-script(src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.6/angular.min.js")
-script(src="/scripts/controller.js")
+//- script(src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.6/angular.min.js")
+//- script(src="/scripts/controller.js")
 
 //- jQuery
 script(src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js")
