--- a/src/styles/login/login.scss
+++ b/src/styles/login/login.scss
@@ -208,6 +208,13 @@ form {
   }
 }
 
+form[name='pass_change_form'] {
+  .email,
+  .codigo {
+    display: none;
+  }
+}
+
 
 /*----------------------------------------------------------------------------*\
     $SMALL
