--- a/src/login/index.jade
+++ b/src/login/index.jade
@@ -1,30 +1,22 @@
 include ../layout/header_interna.jade
 
-section.main(ng-controller="loginCtrl")
+section.main
   .container
     .col-xs-12.col-sm-10.col-md-8.col-lg-6.col-sm-offset-1.col-md-offset-2.col-lg-offset-3
       .title
         h3.title__header Login
         small.title__tagline Bem vindo ao Family24h
 
-      form(name="login_form" ng-submit="onSubmit()" novalidate="novalidate")
+      form(name="login_form" novalidate="novalidate")
         .form__field
           label(for="email") Email
           small(class="email_return")
-          input.form__input(type="email" 
-                            name="email" 
-                            id="email" 
-                            ng-model="formModel.email"
-                            required)
+          input.form__input(type="email" name="email" id="email" required)
 
         .form__field
           label(for="password") Senha
           small(class="password_return")
-          input.form__input(type="password" 
-                            name="password" 
-                            id="password" 
-                            ng-model="formModel.password"
-                            required)
+          input.form__input(type="password" name="password" id="password" required)
 
         .form__field
           input(type="checkbox" name="remember" id="remember")
@@ -33,9 +25,8 @@ section.main(ng-controller="loginCtrl")
           a(href="#") Esqueci minha senha
 
         .form__field
-          button.form__button(type="submit" class="btn btn-lg btn-block") Entrar
+          button.form__button(type="button" class="btn btn-lg btn-block" onclick="getCredentials()") Entrar
 
-      //- pre {{ login_form | json }}
 include ../scripts.jade
 
-//- script(src="scripts/login/login.js")
+script(src="/scripts/login/login.js")
