--- a/src/password/reset/index.jade
+++ b/src/password/reset/index.jade
@@ -1,4 +1,4 @@
-include layout/header_interna.jade
+include ../../layout/header_interna.jade
 
 section.main
   .container
@@ -7,14 +7,11 @@ section.main
         h3.title__header Login
         small.title__tagline Bem vindo ao Family24h
 
-      form(name="login_form")
-        .form__field
+      form(name="pass_reset_form")
+        .form__field.email
           label(for="email") Email
           small(class="email_return")
           input.form__input(type="email" name="email" id="email")
-
-        .form__field
-          button.form__button(type="button" class="btn btn-lg btn-block" onclick="passwordRecovery()") Enviar
 
         .form__field.success
           p Email enviado com sucesso. <br />Cheque a sua pasta de SPAM.
@@ -22,6 +19,9 @@ section.main
         .form__field.fail
           p Ocorreu um problema ao enviar sua requisição. <br/ > Tente novamente em alguns minutos.
 
-include scripts.jade
+        .form__field.envia
+          input.form__button(type="button" class="btn btn-lg btn-block" onclick="passwordRecovery()" value="Enviar")
 
-script(src="scripts/login/login.js")
+include ../../scripts.jade
+
+script(src="/scripts/password/reset/pass_reset.min.js")
