--- a/src/download/index.jade
+++ b/src/download/index.jade
@@ -7,6 +7,10 @@ section.main
         h3.title__header.title__header_left Download
         small.title__tagline Baixe agora, é gratuito!
 
+      .download.col-xs-12.col-sm-12.col-md-12.col-lg-12
+        h4 Baixe o aplicativo no link abaixo:
+        a(href="./family24h_1_4_4.apk") Family24h
+//-
       .download
         h4 Acesse as lojas dos dispositivos
         p Acesse, faça o download e já comece a usar!
