--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -143,16 +143,55 @@ h3 {
   margin-bottom: 0;
   border: none;
   background-color: $black;
+  border-bottom: 4px solid #1a1a1a;
+
+  > .container {
+    height: 56px;
+  }
+
+  .header__logo {
+    bottom: 7px;
+    width: 171px;
+    position: absolute;
+    z-index: 10;
+    left: 0;
+    margin: 0;
+  }
+
+  .header__tagline {
+    color: $medium_gray;
+    font-weight: bold;
+    margin-left: 191px;
+    float: left;
+    font-size: 12px;
+    letter-spacing: 5px;
+    margin-top: 25px;
+  }
 
   .container {
     position: relative;
+  }
+
+  .system {
+    width: 100%;
+    position: relative;
+    border-bottom: 1px solid #424343;
+
+    .login {
+      float: right;
+      color: #3dc7f4;
+      font-family: Ubuntu;
+      font-size: 12px;
+      font-weight: bold;
+      padding: 10px 0;
+    }
   }
 }
 
 .menu {
   position: absolute;
   right: 0;
-  bottom: 0;
+  bottom: -4px;
   font-weight: bold;
 
   li {
@@ -387,6 +426,13 @@ section {
     }
   }
 
+  form {
+    border: none;
+    background-color: transparent;
+    padding: 0;
+    width: 100%;
+  }
+
   .field {
     padding: 0 10px 0 0;
     margin-bottom: 15px;
@@ -395,6 +441,11 @@ section {
   label {
     float: left;
     clear: both;
+    color: #fff;
+
+    span {
+      color: #069;
+    }
   }
 
   input,
@@ -430,6 +481,7 @@ footer {
   padding: 40px 0;
   float: left;
   width: 100%;
+  color: #fff;
 
   .logo img {
     height: 70px;
@@ -494,6 +546,7 @@ footer {
 
     p, .networks {
       text-align: center;
+      font-weight: bold;
     }
 
     img {
