Add last changes

--- a/src/download/index.jade
+++ b/src/download/index.jade
@@ -9,7 +9,10 @@ section.main
 
       .download.col-xs-12.col-sm-12.col-md-12.col-lg-12
         h4 Baixe o aplicativo no link abaixo:
+        p Disponível para Android:
         a(href="./family24h_1_4_4.apk") Family24h
+        br
+        p Breve para iOS
 //-
       .download
         h4 Acesse as lojas dos dispositivos
