--- a/src/home_features.jade
+++ b/src/home_features.jade
@@ -18,7 +18,7 @@ section.features#features
 
           img.more(src="/images/icon_more.png")
         .item__back
-          p Utilizar nossa plataforma web (Family24h.com) para ter acesso a todos os aparelhos sem precisar do seu celular
+          p Em uma situação de emergencia é possivel enviar fotos câmera ferontal e traseira e gravação de audio de 10s para todos os membros do grupo.
 
           img.minus(src="/images/icon_minus.png")
 
@@ -32,11 +32,11 @@ section.features#features
 
           img.more(src="images/icon_more.png")
         .item__back
-          p Utilizar nossa plataforma web (Family24h.com) para ter acesso a todos os aparelhos sem precisar do seu celular
+          p É possivel veriica nivel de bateira, sinal e beloiade, de cada um dos membros individualmente, vbem como o endereço atual
 
           img.minus(src="/images/icon_minus.png")
 
-      .list__item
+      //-.list__item
         .item__front
           img.icon(src="/images/icon_sms.png")
           p 
@@ -54,17 +54,17 @@ section.features#features
         .item__front
           img.icon(src="/images/icon_fence.png")
           p 
-            | Cercas
+            | Alarme de
             br
-            | virtuais
+            | perímetro
 
           img.more(src="/images/icon_more.png")
         .item__back
-          p Utilizar nossa plataforma web (Family24h.com) para ter acesso a todos os aparelhos sem precisar do seu celular
+          p É possível definir uma área no mapa de entradas e saídas dos membros de seus grupos
 
           img.minus(src="/images/icon_minus.png")
 
-      .list__item
+      //-.list__item
         .item__front
           img.icon(src="/images/icon_simcard.png")
           p 
@@ -90,11 +90,11 @@ section.features#features
 
           img.more(src="/images/icon_more.png")
         .item__back
-          p Utilizar nossa plataforma web (Family24h.com) para ter acesso a todos os aparelhos sem precisar do seu celular
+          p Seja avisado quando um membro de seu grupo ultrapassar o limite de velocidade determinado
 
           img.minus(src="images/icon_minus.png")
 
-      .list__item
+      //-.list__item
         .item__front
           img.icon(src="/images/icon_eye.png")
           p 
@@ -110,7 +110,7 @@ section.features#features
 
           img.minus(src="/images/icon_minus.png")
 
-      .list__item
+      //-.list__item
         .item__front
           img.icon(src="/images/icon_warn.png")
           p Item description normal
@@ -131,6 +131,6 @@ section.features#features
 
           img.more(src="/images/icon_more.png")
         .item__back
-          p Utilizar nossa plataforma web (Family24h.com) para ter acesso a todos os aparelhos sem precisar do seu celular
+          p Veja onde os membros do seu grupo estiveram, dia após dia, com o histórico de posições.
 
           img.minus(src="/images/icon_minus.png")
