--- a/src/index.jade
+++ b/src/index.jade
@@ -34,9 +34,9 @@ html(class="no-js" lang="pt-BR" ng-app)
               a(href="#intro") Conheça
             li
               a(href="#features") Vantagens
-            li
+            //-li
               a(href="#versions") Versões
-            //- li
+            //-li
               a(href="#help") Ajuda
             li
               a(href="download") Downloads
@@ -46,7 +46,7 @@ html(class="no-js" lang="pt-BR" ng-app)
 
         .text.col-xs-5.col-sm-5.col-md-5.col-lg-5
           h4 Sua família mais protegida!
-          p <strong>Family24h</strong> é um aplicativo mobile que permite o monitoramento familiar, no qual você tem acesso, on line, a localização dos aparelhos cadastrados, através de um mapa interativo.
+          p <strong>Family24h</strong> é um aplicativo mobile focado na segurança de sua família, no qual você tem acesso, online, a localização dos aparelhos cadastrados, através de um mapa interativo.
 
           a(class="btn btn-default baixar" href="download.html" role="button") Baixe agora, é gratuito!
 
@@ -54,7 +54,7 @@ html(class="no-js" lang="pt-BR" ng-app)
     
     include home_features.jade
 
-    section.versions#versions
+    //-section.versions#versions
       .container
         .row
           h3 
