--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -316,7 +316,7 @@ section {
   line-height: 22px;
   color: #fff;
   font-weight: normal;
-  background-color: $light_green;
+  // background-color: $light_green;
   transform: rotateY(180deg);
 }
 
