--- a/src/index.jade
+++ b/src/index.jade
@@ -48,9 +48,9 @@ html(class="no-js" lang="pt-BR" ng-app)
           h4 Sua família mais protegida!
           p <strong>Family24h</strong> é um aplicativo mobile focado na segurança de sua família, no qual você tem acesso, online, a localização dos aparelhos cadastrados, através de um mapa interativo.
 
-          a(class="btn btn-default baixar" href="download.html" role="button") Baixe agora, é gratuito!
+          a(class="btn btn-default baixar" href="/download" role="button") Baixe agora, é gratuito!
 
-          a(class="btn btn-default video" href="#" role="button") Assista ao vídeo
+          //- a(class="btn btn-default video" href="#" role="button") Assista ao vídeo
     
     include home_features.jade
 
@@ -150,7 +150,7 @@ html(class="no-js" lang="pt-BR" ng-app)
             li 
               a(href="#contact") Contato
 
-        .appstore
+        //- .appstore
           img(src="images/google_play.png")
           img(src="images/app_store.png")
 
