--- a/src/download/index.jade
+++ b/src/download/index.jade
@@ -9,10 +9,15 @@ section.main
 
       .download.col-xs-12.col-sm-12.col-md-12.col-lg-12
         h4 Baixe o aplicativo no link abaixo:
-        p Disponível para Android:
-        a(href="./family24h_1_4_4.apk") Family24h
+        .release
+          p Disponível para Android:
+          a(href="./family_release_1.4.7.apk") 
+            img(src="/images/download_android.png")
         br
-        p Breve para iOS
+        br
+        .release
+          p Breve para iOS
+          img(src="/images/download_ios.png")
 //-
       .download
         h4 Acesse as lojas dos dispositivos
