--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -316,7 +316,6 @@ section {
   line-height: 22px;
   color: #fff;
   font-weight: normal;
-  // background-color: $light_green;
   transform: rotateY(180deg);
 }
 
@@ -509,6 +508,7 @@ footer {
         font-family: 'MavenPro', sans-serif;
         font-weight: bold;
         margin: 10px 0;
+        list-style: none;
 
       p {
         font-size: 18px;
