--- a/src/download/index.jade
+++ b/src/download/index.jade
@@ -7,17 +7,15 @@ section.main
         h3.title__header.title__header_left Download
         small.title__tagline Baixe agora, é gratuito!
 
-      .download.col-xs-12.col-sm-12.col-md-12.col-lg-12
+      .download.col-xs-12.col-sm-12.col-md-6.col-lg-6.col-md-offset-3.col-lg-offset-3
         h4 Baixe o aplicativo no link abaixo:
         .release
           p Disponível para Android:
           a(href="./family_release_1.4.7.apk") 
             img(src="/images/download_android.png")
-        br
-        br
         .release
-          p Breve para iOS
-          img(src="/images/download_ios.png")
+          p Em breve para iOS
+          img(src="/images/download_ios.png" alt="Em breve para iOS")
 //-
       .download
         h4 Acesse as lojas dos dispositivos
