--- a/src/index.jade
+++ b/src/index.jade
@@ -1,5 +1,5 @@
 doctype html
-html(class="no-js" lang="pt-BR" ng-app)
+html(lang="pt-BR")
   head
     meta(charset="utf-8")
     meta(http-equiv="x-ua-compatible" content="ie=edge")
