--- a/src/layout/header_interna.jade
+++ b/src/layout/header_interna.jade
@@ -1,5 +1,5 @@
 doctype html
-html(class="no-js" lang="pt-BR" ng-app="family")
+html(lang="pt-BR")
   head
     meta(charset="utf-8")
     meta(http-equiv="x-ua-compatible" content="ie=edge")
@@ -12,7 +12,7 @@ html(class="no-js" lang="pt-BR" ng-app="family")
     <!-- Place favicon.ico in the root directory -->
     link(rel="shortcut icon" href="favicon.ico" type="image/x-icon")
 
-    link(rel="stylesheet" href="/styles/style.min.css")
+    link(rel="stylesheet" href="/styles/style.css")
 
     script(src="/scripts/vendor/modernizr-2.8.3.min.js")
 
