Improve Login/Logout Validation and Cookies

--- a/src/dashboard/index.jade
+++ b/src/dashboard/index.jade
@@ -47,5 +47,5 @@ include ../scripts.jade
 script(src="/scripts/dashboard/dashboard.js")
 
 script.
-  geo_location();  
+  //- geo_location();  
   resizeSidebar();
