--- a/src/layout/header.jade
+++ b/src/layout/header.jade
@@ -16,7 +16,7 @@ html(lang="pt-BR")
 
     script(src="/scripts/vendor/modernizr-2.8.3.min.js")
 
-  body
+  body.dashboard
     .top
       .logo
         a(href="/")
