--- a/src/login/index.jade
+++ b/src/login/index.jade
@@ -1,6 +1,6 @@
 include ../layout/header_interna.jade
 
-section.main
+section.main.login
   .container
     .col-xs-12.col-sm-10.col-md-8.col-lg-6.col-sm-offset-1.col-md-offset-2.col-lg-offset-3
       .title
