--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -572,19 +572,32 @@ footer {
     $DOWNLOAD
 \*----------------------------------------------------------------------------*/
 .download {
-  margin-left: 25% !important;
+  border: 1px solid $medium_gray;
+  border-radius: 5px;
+  background-color: $lighter_gray;
+  overflow: hidden;
+  width: calc(50% - 10px);
+  box-sizing: border-box;
+  float: left;
+  padding: 30px;
+  color: $dark_gray;
+  font-family: 'Ubuntu', sans-serif;
   
   .release {
     width: 50%;
     float: left;
     margin-bottom: 15px;
-
-    img {
-      float: left !important;
-      margin: 0;
-    }
   }
-} 
+
+  h4 {
+    font-weight: bold;
+    font-size: 24px;
+  }
+
+  p {
+    font-size: 18px;
+  }
+}
 
 //=include login/login.scss
 
