Fix header's bug

--- a/src/home_features.jade
+++ b/src/home_features.jade
@@ -84,7 +84,7 @@ section.features#features
         .item__front
           img.icon(src="/images/icon_velocidade.png")
           p 
-            | Informações
+            | Alarme
             br
             | de velocidade
 
@@ -128,6 +128,22 @@ section.features#features
             | Histórico de
             br
             | posições
+
+          img.more(src="/images/icon_more.png")
+        .item__back
+          p Veja onde os membros do seu grupo estiveram, dia após dia, com o histórico de posições.
+
+          img.minus(src="/images/icon_minus.png")
+
+
+
+      .list__item
+        .item__front
+          img.icon(src="/images/icon_geolocation.png")
+          p  
+            | Acesso através
+            br
+            | da Web
 
           img.more(src="/images/icon_more.png")
         .item__back
