--- a/src/styles/login/login.scss
+++ b/src/styles/login/login.scss
@@ -1,7 +1,7 @@
 /*----------------------------------------------------------------------------*\
     $LOGIN
 \*----------------------------------------------------------------------------*/
-.login {
+#login {
   display: none;
 }
 
