Add Web access's text

--- a/src/home_features.jade
+++ b/src/home_features.jade
@@ -147,6 +147,6 @@ section.features#features
 
           img.more(src="/images/icon_more.png")
         .item__back
-          p Veja onde os membros do seu grupo estiveram, dia após dia, com o histórico de posições.
+          p Além de acessar via Mobile, você também pode acessá-lo pelo seu navegador preferido. 
 
           img.minus(src="/images/icon_minus.png")
