Workaround Login JS bug

--- a/src/styles/login/login.scss
+++ b/src/styles/login/login.scss
@@ -2,7 +2,7 @@
     $LOGIN
 \*----------------------------------------------------------------------------*/
 #login {
-  display: none;
+  // display: none;
 }
 
 .title,
