Improve window's resize function

--- a/src/dashboard/index.jade
+++ b/src/dashboard/index.jade
@@ -17,10 +17,6 @@ include ../layout/header.jade
           img(src="/images/ic_speaker_phone_black_48px.svg")
           p Ring
 
-        a.pattern(href="#" onclick="displayModal('pattern');")
-          img(src="/images/ic_dialpad_black_48px.svg")
-          p Pattern
-
         a.wipe(href="#" onclick="displayModal('wipe');")
           img(src="/images/ic_phonelink_erase_black_48px.svg")
           p Wipe
@@ -48,4 +44,4 @@ script(src="/scripts/dashboard/dashboard.js")
 
 script.
   //- geo_location();  
-  resizeSidebar();
+  //- resizeSidebar();
