--- a/web/src/download/index.jade
+++ b/web/src/download/index.jade
@@ -7,21 +7,24 @@ section.main
         h3.title__header.title__header_left Download
         small.title__tagline Baixe agora, é gratuito!
 
-      .download.col-xs-12.col-sm-12.col-md-6.col-lg-6.col-md-offset-3.col-lg-offset-3
-        h4 Baixe o aplicativo no link abaixo:
-        .release
-          p Disponível para Android:
-          a(href="./family-release-1.4.11.apk")
-            img(src="/images/download_android.png")
-        .release
-          p Em breve para iOS
-          img(src="/images/download_ios.png" alt="Em breve para iOS")
+      .download
+        h4 Acesse as lojas dos dispositivos
+        .row
+          .col-xs-12.col-sm-6
+            .release.text-center
+              p Disponível para Android:
+              a(href="https://play.google.com/store/apps/details?id=br.com.family_24h")
+                img(src="/images/google_play.png")
+          .col-xs-12.col-sm-6
+            .release.text-center
+              p Em breve para iOS
+              img(src="/images/app_store_soon.png" alt="Em breve para iOS")
 //-
       .download
         h4 Acesse as lojas dos dispositivos
         p Acesse, faça o download e já comece a usar!
 
-        img(src="images/app_store.png")
+        img(src="images/app_store_soon.png")
 
         img(src="images/google_play.png")
 
