--- a/web/src/login/index.jade
+++ b/web/src/login/index.jade
@@ -22,7 +22,7 @@ section.main#login
           input(type="checkbox" name="remember" id="remember")
           label(for="remember") Mantenha-me conectado
 
-          a(href="#") Esqueci minha senha
+          a(href="/password/reset") Esqueci minha senha
 
         .form__field
           button.form__button(type="submit" class="btn btn-lg btn-block" ) Entrar
