--- a/web/src/scripts.jade
+++ b/web/src/scripts.jade
@@ -6,15 +6,18 @@
 
 //- jQuery
 script(src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js")
+script(src="/scripts/jquery.tr.dictionary.js")
+script(src="/scripts/jquery.tr.js")
 
 //- Google Maps
-//- script(src="https://maps.googleapis.com/maps/api/js?v=3.exp&sensor=true")
+script(src="https://maps.googleapis.com/maps/api/js?v=3.exp&sensor=false")
 
 //- Bootstrap Scripts
-//- script(src="/scripts/bootstrap/alert.js")
+script(src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous")
 
 //- Local Scripts
 script(src="/scripts/lib.js")
+script(src="/scripts/faq.js")
 
 //- Google Analytics: change UA-XXXXX-X to be your site's ID.
 script.
