--- a/web/src/dashboard/index.jade
+++ b/web/src/dashboard/index.jade
@@ -3,15 +3,16 @@ include ../layout/header.jade
 .dashboard(role="main")
 
   section.content
-    #flash.alert.alert-dismissible(role="alert")
-      button(type="button" class="close" data-dismiss="alert" aria-label="Close")
+    #flash.alert(role="alert")
+      .message
+      button(type="button" class="close" aria-label="Close")
         span(aria-hidden="true") &times;
 
     .button__bar
       .buttons
         a.lock(href="#" onclick="displayModal('lock');")
           img(src="/images/ic_phonelink_lock_black_48px.svg")
-          p Lock
+          p Mark as stolen
 
         a.ring(href="#" onclick="displayModal('ring');")
           img(src="/images/ic_speaker_phone_black_48px.svg")
@@ -23,20 +24,26 @@ include ../layout/header.jade
 
     #mapdiv
 
-    .confirm-modal(role="modal")
-      button(type="button" class="close" data-dismiss="alert" aria-label="Close")
-        span(aria-hidden="true") &times;
-      h3
-
-      .row
-        div
-          .avatar
-            img(src="")
-
-        div
-          p This will ring your phone for 15 seconds
-
-      a(class="btn btn-lg btn-success btn-ring" href="#" role="button") Ring ma' bell
+    .modal.fade(id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel")
+      .modal-dialog(role="document")
+        .modal-content
+          .modal-header
+            button.close(data-dismiss="modal" aria-label="Close")
+              .span(aria-hidden="true") &times;
+            h4.modal-title(id="myModalLabel") Modal title
+          .modal-body
+            #flash-modal.alert(role="alert")
+              .message
+              button(type="button" class="close" aria-label="Close")
+                span(aria-hidden="true") &times;
+            .row
+              .col-sm-3.col-xs-12.text-center
+                .avatar
+                  img(src="")
+              .col-sm-9.col-xs-12
+                p This will ring your phone for 15 seconds
+          .modal-footer
+            button.btn.btn-primary Ring
 
 include ../scripts.jade
 
