--- a/web/src/home_features.jade
+++ b/web/src/home_features.jade
@@ -6,147 +6,157 @@ section.features#features
         span Vantagens
         small Só o Family24h oferece:
 
-    .list.col-xs-12.col-sm-12.col-md-9.col-lg-9
+    .list.col-xs-12.col-sm-12.col-md-10.col-lg-10
 
-      .list__item
-        .item__front
-          img.icon(src="images/icon_warn.png")
-          p 
-            | Alerta de 
-            br 
-            | Panico
+      .col-sm-4.col-xs-6
+        .list__item
+          .item__front
+            img.icon(src="images/icon_warn.png")
+            p 
+              | Alerta de 
+              br 
+              | Panico
 
-          img.more(src="/images/icon_more.png")
-        .item__back
-          p Em uma situação de emergencia é possivel enviar fotos câmera ferontal e traseira e gravação de audio de 10s para todos os membros do grupo.
+            img.more(src="/images/icon_more.png")
+          .item__back
+            p Em uma situação de emergencia é possivel enviar fotos câmera ferontal e traseira e gravação de audio de 5s para todos os membros do grupo.
 
-          img.minus(src="/images/icon_minus.png")
+            img.minus(src="/images/icon_minus.png")
 
-      .list__item
-        .item__front
-          img.icon(src="/images/icon_id.png")
-          p 
-            | Detalhamento
-            br
-            | do dispositivo
+      .col-sm-4.col-xs-6
+        .list__item
+          .item__front
+            img.icon(src="/images/icon_id.png")
+            p 
+              | Detalhamento
+              br
+              | do dispositivo
 
-          img.more(src="images/icon_more.png")
-        .item__back
-          p É possivel veriica nivel de bateira, sinal e beloiade, de cada um dos membros individualmente, vbem como o endereço atual
+            img.more(src="images/icon_more.png")
+          .item__back
+            p É possivel veriica nivel de bateira, sinal e beloiade, de cada um dos membros individualmente, vbem como o endereço atual
 
-          img.minus(src="/images/icon_minus.png")
+            img.minus(src="/images/icon_minus.png")
 
-      //-.list__item
-        .item__front
-          img.icon(src="/images/icon_sms.png")
-          p 
-            | Avisos por
-            br
-            | SMS
+      //-.col-sm-4.col-xs-6
+        .list__item
+          .item__front
+            img.icon(src="/images/icon_sms.png")
+            p 
+              | Avisos por
+              br
+              | SMS
 
-          img.more(src="/images/icon_more.png")
-        .item__back
-          p Utilizar nossa plataforma web (Family24h.com) para ter acesso a todos os aparelhos sem precisar do seu celular
+            img.more(src="/images/icon_more.png")
+          .item__back
+            p Utilizar nossa plataforma web (Family24h.com) para ter acesso a todos os aparelhos sem precisar do seu celular
 
-          img.minus(src="/images/icon_minus.png")
+            img.minus(src="/images/icon_minus.png")
 
-      .list__item
-        .item__front
-          img.icon(src="/images/icon_fence.png")
-          p 
-            | Alarme de
-            br
-            | perímetro
+      .col-sm-4.col-xs-6
+        .list__item
+          .item__front
+            img.icon(src="/images/icon_fence.png")
+            p 
+              | Alarme de
+              br
+              | perímetro
 
-          img.more(src="/images/icon_more.png")
-        .item__back
-          p É possível definir uma área no mapa de entradas e saídas dos membros de seus grupos
+            img.more(src="/images/icon_more.png")
+          .item__back
+            p É possível definir uma área no mapa de entradas e saídas dos membros de seus grupos
 
-          img.minus(src="/images/icon_minus.png")
+            img.minus(src="/images/icon_minus.png")
 
-      //-.list__item
-        .item__front
-          img.icon(src="/images/icon_simcard.png")
-          p 
-            | Aviso de
-            br
-            | substituição
-            br
-            | do SIMCARD
+      //-.col-sm-4.col-xs-6
+        .list__item
+          .item__front
+            img.icon(src="/images/icon_simcard.png")
+            p 
+              | Aviso de
+              br
+              | substituição
+              br
+              | do SIMCARD
 
-          img.more(src="/images/icon_more.png")
-        .item__back
-          p Utilizar nossa plataforma web (Family24h.com) para ter acesso a todos os aparelhos sem precisar do seu celular
+            img.more(src="/images/icon_more.png")
+          .item__back
+            p Utilizar nossa plataforma web (Family24h.com) para ter acesso a todos os aparelhos sem precisar do seu celular
 
-          img.minus(src="/images/icon_minus.png")
+            img.minus(src="/images/icon_minus.png")
 
-      .list__item
-        .item__front
-          img.icon(src="/images/icon_velocidade.png")
-          p 
-            | Alarme
-            br
-            | de velocidade
+      .col-sm-4.col-xs-6
+        .list__item
+          .item__front
+            img.icon(src="/images/icon_velocidade.png")
+            p 
+              | Alarme
+              br
+              | de velocidade
 
-          img.more(src="/images/icon_more.png")
-        .item__back
-          p Seja avisado quando um membro de seu grupo ultrapassar o limite de velocidade determinado
+            img.more(src="/images/icon_more.png")
+          .item__back
+            p Seja avisado quando um membro de seu grupo ultrapassar o limite de velocidade determinado
 
-          img.minus(src="images/icon_minus.png")
+            img.minus(src="images/icon_minus.png")
 
-      //-.list__item
-        .item__front
-          img.icon(src="/images/icon_eye.png")
-          p 
-            | Proteção contra
-            br
-            | roubo do aparelho
-            br
-            | e dos dados
+      //-.col-sm-4.col-xs-6
+        .list__item
+          .item__front
+            img.icon(src="/images/icon_eye.png")
+            p 
+              | Proteção contra
+              br
+              | roubo do aparelho
+              br
+              | e dos dados
 
-          img.more(src="/images/icon_more.png")
-        .item__back
-          p Utilizar nossa plataforma web (Family24h.com) para ter acesso a todos os aparelhos sem precisar do seu celular
+            img.more(src="/images/icon_more.png")
+          .item__back
+            p Utilizar nossa plataforma web (Family24h.com) para ter acesso a todos os aparelhos sem precisar do seu celular
 
-          img.minus(src="/images/icon_minus.png")
+            img.minus(src="/images/icon_minus.png")
 
-      //-.list__item
-        .item__front
-          img.icon(src="/images/icon_warn.png")
-          p Item description normal
+      //-.col-sm-4.col-xs-6
+        .list__item
+          .item__front
+            img.icon(src="/images/icon_warn.png")
+            p Item description normal
 
-          img.more(src="/images/icon_more.png")
-        .item__back
-          p Utilizar nossa plataforma web (Family24h.com) para ter acesso a todos os aparelhos sem precisar do seu celular
+            img.more(src="/images/icon_more.png")
+          .item__back
+            p Utilizar nossa plataforma web (Family24h.com) para ter acesso a todos os aparelhos sem precisar do seu celular
 
-          img.minus(src="/images/icon_minus.png")
+            img.minus(src="/images/icon_minus.png")
 
-      .list__item
-        .item__front
-          img.icon(src="/images/icon_geolocation.png")
-          p  
-            | Histórico de
-            br
-            | posições
+      .col-sm-4.col-xs-6
+        .list__item
+          .item__front
+            img.icon(src="/images/icon_geolocation.png")
+            p  
+              | Histórico de
+              br
+              | posições
 
-          img.more(src="/images/icon_more.png")
-        .item__back
-          p Veja onde os membros do seu grupo estiveram, dia após dia, com o histórico de posições.
+            img.more(src="/images/icon_more.png")
+          .item__back
+            p Veja onde os membros do seu grupo estiveram, dia após dia, com o histórico de posições.
 
-          img.minus(src="/images/icon_minus.png")
+            img.minus(src="/images/icon_minus.png")
 
 
 
-      .list__item
-        .item__front
-          img.icon(src="/images/icon_geolocation.png")
-          p  
-            | Acesso através
-            br
-            | da Web
+      .col-sm-4.col-xs-6
+        .list__item
+          .item__front
+            img.icon(src="/images/icon_geolocation.png")
+            p  
+              | Acesso através
+              br
+              | da Web
 
-          img.more(src="/images/icon_more.png")
-        .item__back
-          p Além de acessar via Mobile, você também pode acessá-lo pelo seu navegador preferido. 
+            img.more(src="/images/icon_more.png")
+          .item__back
+            p Além de acessar via Mobile, você também pode acessá-lo pelo seu navegador preferido. 
 
-          img.minus(src="/images/icon_minus.png")
+            img.minus(src="/images/icon_minus.png")
