--- a/web/src/home_help.jade
+++ b/web/src/home_help.jade
@@ -10,210 +10,4 @@ section.help#help
       span.glyphicon.glyphicon-search
       input(type="text" id="busca" name="busca" placeholder="Digite aqui sua pergunta")
 
-    .col-xs-3.col-sm-3.col-md-3.col-lg-3
-      h4 Tópico
-        ul
-          li
-            a(href="#") Item 
-          li
-            a(href="#") Item 
-          li
-            a(href="#") Item 
-          li
-            a(href="#") Item 
-          li
-            a(href="#") Item 
-
-      h4 Tópico
-        ul
-          li
-            a(href="#") Item 
-          li
-            a(href="#") Item 
-          li
-            a(href="#") Item 
-          li
-            a(href="#") Item 
-          li
-            a(href="#") Item 
-      h4 Tópico
-        ul
-          li
-            a(href="#") Item 
-          li
-            a(href="#") Item 
-          li
-            a(href="#") Item 
-          li
-            a(href="#") Item 
-          li
-            a(href="#") Item 
-
-      h4 Tópico
-        ul
-          li
-            a(href="#") Item 
-          li
-            a(href="#") Item 
-          li
-            a(href="#") Item 
-          li
-            a(href="#") Item 
-          li
-            a(href="#") Item 
-
-    .col-xs-3.col-sm-3.col-md-3.col-lg-3
-      h4 Tópico
-        ul
-          li
-            a(href="#") Item 
-          li
-            a(href="#") Item 
-          li
-            a(href="#") Item 
-          li
-            a(href="#") Item 
-          li
-            a(href="#") Item 
-      h4 Tópico
-        ul
-          li
-            a(href="#") Item 
-          li
-            a(href="#") Item 
-          li
-            a(href="#") Item 
-          li
-            a(href="#") Item 
-          li
-            a(href="#") Item 
-
-      h4 Tópico
-        ul
-          li
-            a(href="#") Item 
-          li
-            a(href="#") Item 
-          li
-            a(href="#") Item 
-          li
-            a(href="#") Item 
-          li
-            a(href="#") Item 
-
-      h4 Tópico
-        ul
-          li
-            a(href="#") Item 
-          li
-            a(href="#") Item 
-          li
-            a(href="#") Item 
-          li
-            a(href="#") Item 
-          li
-            a(href="#") Item 
-
-    .col-xs-3.col-sm-3.col-md-3.col-lg-3
-      h4 Tópico
-        ul
-          li
-            a(href="#") Item 
-          li
-            a(href="#") Item 
-          li
-            a(href="#") Item 
-          li
-            a(href="#") Item 
-          li
-            a(href="#") Item 
-      h4 Tópico
-        ul
-          li
-            a(href="#") Item 
-          li
-            a(href="#") Item 
-          li
-            a(href="#") Item 
-          li
-            a(href="#") Item 
-          li
-            a(href="#") Item 
-
-      h4 Tópico
-        ul
-          li
-            a(href="#") Item 
-          li
-            a(href="#") Item 
-          li
-            a(href="#") Item 
-          li
-            a(href="#") Item 
-          li
-            a(href="#") Item 
-
-      h4 Tópico
-        ul
-          li
-            a(href="#") Item 
-          li
-            a(href="#") Item 
-          li
-            a(href="#") Item 
-          li
-            a(href="#") Item 
-          li
-            a(href="#") Item 
-
-    .col-xs-3.col-sm-3.col-md-3.col-lg-3
-      h4 Tópico
-        ul
-          li
-            a(href="#") Item 
-          li
-            a(href="#") Item 
-          li
-            a(href="#") Item 
-          li
-            a(href="#") Item 
-          li
-            a(href="#") Item 
-      h4 Tópico
-        ul
-          li
-            a(href="#") Item 
-          li
-            a(href="#") Item 
-          li
-            a(href="#") Item 
-          li
-            a(href="#") Item 
-          li
-            a(href="#") Item 
-
-      h4 Tópico
-        ul
-          li
-            a(href="#") Item 
-          li
-            a(href="#") Item 
-          li
-            a(href="#") Item 
-          li
-            a(href="#") Item 
-          li
-            a(href="#") Item 
-
-      h4 Tópico
-        ul
-          li
-            a(href="#") Item 
-          li
-            a(href="#") Item 
-          li
-            a(href="#") Item 
-          li
-            a(href="#") Item 
-          li
-            a(href="#") Item 
+    .faq-list.multi-column
