--- a/web/src/styles/style.scss
+++ b/web/src/styles/style.scss
@@ -58,13 +58,18 @@ $light_green: #69dbd2;
 /*----------------------------------------------------------------------------*\
     $SHARED
 \*----------------------------------------------------------------------------*/
+
+body.home {
+  padding-top: 90px;
+}
+
 * {
   box-sizing: border-box;
 }
 
 h3 {
   font-family: 'Ubuntu', sans-serif;
-  font-size: 48px;
+  font-size: 3.45em;
   font-weight: bold;
   line-height: 54px;
   margin: 70px 0 40px 40px;
@@ -76,12 +81,13 @@ h3 {
 
   small {
     float: left;
-    font-size: 30px;
-    line-height: 54px;
+    font-size: 0.6em;
+    line-height: 2em;
     color: $dark_gray;
     border-left: 1px solid $dark_gray;
     padding-left: 35px;
     margin-left: 35px;
+    max-width: 75%;
   }
 }
 
@@ -94,6 +100,8 @@ h3 {
     color: #fff;
     text-transform: uppercase;
     border: none;
+    font-weight: bolder;
+    padding: 12px 15px;
 
     &:hover {
       color: #fff;
@@ -111,6 +119,20 @@ h3 {
   }
 }
 
+.intro{
+  a {
+    font-size: 0.7em;
+  }
+}
+
+.terms-content {
+  padding: 40px 50px;
+  border: 1px solid #e0e0e0;
+  h4{
+    margin-top: 25px;
+  }
+}
+
 /*----------------------------------------------------------------------------*\
     $HEADER
 \*----------------------------------------------------------------------------*/
@@ -124,9 +146,7 @@ h3 {
 
 .header__logo {
   height: 70px;
-  float: left;
   margin-top: 25px;
-  margin-bottom: 10px;
 }
 
 .header__tagline {
@@ -138,7 +158,14 @@ h3 {
   font-size: 12px;
   letter-spacing: 5px;
 }
-
+.headermobile__tagline {
+  text-align: center;
+  padding: 10px 0;
+  font-size: 0.7em;
+  letter-spacing: 0.2em;
+  font-weight: bold;
+  color: #ccc;
+}
 .header_dark {
   margin-bottom: 0;
   border: none;
@@ -150,49 +177,62 @@ h3 {
   }
 
   .header__logo {
-    bottom: 7px;
     width: 171px;
-    position: absolute;
-    z-index: 10;
-    left: 0;
-    margin: 0;
+    margin-top: -15px;
   }
 
   .header__tagline {
     color: $medium_gray;
     font-weight: bold;
-    margin-left: 191px;
-    float: left;
     font-size: 12px;
     letter-spacing: 5px;
     margin-top: 25px;
+    text-align: center;
   }
 
+  .navbar{
+    margin-bottom: 0;
+  }
   .container {
     position: relative;
   }
 
+  .navbar-toggle{
+     position: absolute;
+     top: 0;
+     right: 0;
+     border-color: #fff;
+     color: #fff;
+     float: none;
+  }
+  .navbar-toggle span{
+     background-color: #fff;
+  }
+  
   .system {
     width: 100%;
     position: relative;
     border-bottom: 1px solid #424343;
+    text-align: right;
 
     .login {
-      float: right;
       color: #3dc7f4;
       font-family: Ubuntu;
       font-size: 12px;
       font-weight: bold;
-      padding: 10px 0;
+      padding: 10px 15px;
     }
   }
 }
 
+.login-menu {
+  display: block;
+  margin: 5px;
+}
+
 .menu {
-  position: absolute;
-  right: 0;
-  bottom: -4px;
   font-weight: bold;
+  margin-bottom: -5px;
 
   li {
     list-style: none;
@@ -204,17 +244,35 @@ h3 {
   a {
     color: #fff;
     float: left;
-    padding-bottom: 19px;
+    border-top: 4px solid #2e2e2e;
+    border-bottom: 4px solid #1a1a1a;
+
 
     &.active,
     &:hover {
       color: #fff;
       border-bottom: 4px solid $light_blue;
       text-decoration: none;
-      padding-bottom: 15px;
     }
   }
 }
+@-moz-document url-prefix(){
+  .menu {
+    position: relative;
+    bottom: -5px;
+    margin-bottom: 0;
+  }
+
+}
+.nav > li > a:hover, .nav > li > a:focus{
+  background-color: transparent;
+}
+.nav > li > a{
+  font-size: 1.1em;
+  padding-top: 20px;
+  padding-bottom: 20px;
+}
+
 
 section {
   width: 100%;
@@ -231,7 +289,7 @@ section {
 
   .text {
     margin-top: 185px;
-    font-size: 20px;
+    font-size: 1.4em;
     color: $dark_gray;
 
     strong {
@@ -241,7 +299,7 @@ section {
   }
 
   h4 {
-    font-size: 52px;
+    font-size: 2.5em;
     font-weight: bold;
     color: $light_blue;
   }
@@ -251,8 +309,8 @@ section {
     $FEATURES
 \*----------------------------------------------------------------------------*/
 .features {
-  background: #fff url('../images/site_features.jpg') top right scroll no-repeat;
-  height: 1016px;
+  background: #f3f3f3 url('../images/site_features.jpg') bottom right scroll no-repeat;
+  min-height: 800px;
 
   h3 {
     color: $dark_blue;
@@ -264,9 +322,7 @@ section {
 }
 
 .list__item {
-  height: 204px;
-  width: 30%;
-  float: left;
+  height: 200px;
   margin: 10px;
   border-radius: 10px;
   opacity: .8;
@@ -275,6 +331,7 @@ section {
   transition: 0.6s;
   transform-style: preserve-3d;
   cursor: pointer;
+  border: 1px solid #efefef;
 
   &.flip {
     background-color: $light_green;
@@ -293,7 +350,7 @@ section {
 .item__back {
   text-align: center;
   font-family: 'Ubuntu', sans-serif;
-  font-size: 20px;
+  font-size: 1.45em;
   font-weight: bold;
   position: relative;
   height: 100%;
@@ -307,15 +364,23 @@ section {
 
   .icon {
     margin-bottom: 10px;
+    margin-top: 15px;
   }
 }
 
 .item__back {
-  font-size: 18px;
+  font-size: 1.35em;
   line-height: 22px;
   color: #fff;
   font-weight: normal;
   transform: rotateY(180deg);
+  display: table;
+  table-layout: fixed;
+  p {
+    display:table-cell;
+    vertical-align:middle;
+    text-align:center
+  }
 }
 
 /*----------------------------------------------------------------------------*\
@@ -323,30 +388,27 @@ section {
 \*----------------------------------------------------------------------------*/
 .versions {
   background: #fff url('../images/site_versions.jpg') bottom center scroll no-repeat;
+  padding-bottom: 220px;
 
   h3 {
     color: $light_blue;
   }
 
   .slide {
-    height: 541px;
-    margin: 70px 0 170px;
 
     img {
       overflow: hidden;
     }
 
-    .text {
-      font-size: 20px;
+    p {
+      font-size: 1.8em;
       font-family: 'Ubuntu', sans-serif;
-      top: 105px;
-      right: 70px;
-      position: absolute;
+      margin: 35px 0;
     }
 
     ul {
       padding-left: 20px;
-      font-size: 22px;
+      font-size: 0.8em;
       font-family: 'Ubuntu', sans-serif;
       font-weight: bold;
       color: $light_blue;
@@ -357,6 +419,24 @@ section {
     margin-top: 35px;
     padding: 12px 15px;
   }
+
+  .carousel-control.left, .carousel-control.right {
+    background-image: none;
+  }
+  
+  .carousel-indicators{
+    bottom: -50px;
+  }
+  .carousel-indicators li{
+    border-color: #006599;
+    background-color: transparent;
+  }
+  .carousel-indicators .active{
+    background-color: #006599;
+  }
+  .carousel-control{
+    color: #006599;
+  }
 }
 
 /*----------------------------------------------------------------------------*\
@@ -364,13 +444,13 @@ section {
 \*----------------------------------------------------------------------------*/
 .help {
   background: #fff url('../images/site_help.png') top center scroll repeat-x;
-  height: 700px;
+  min-height: 700px;
 
   h3 {
     color: $dark_blue;
 
     small {
-      font-size: 24px;
+      font-size: 0.6em;
     }
   }
 
@@ -391,14 +471,58 @@ section {
     font-size: 24px;
     margin: 70px 0 40px;
   }
+  .multi-column{
+    -webkit-column-count: 3;
+    -moz-column-count: 3;
+    column-count: 3;
+  }
+  .faq-list{
+    font-family: 'Ubuntu', sans-serif;
+    clear: both;
+
+    h3{
+      font-size: 2em;
+      margin: 5px 0;
+      color: #32ccfe;
+      float: none;
+    }
+
+    ul{
+      list-style-type: none;
+    }
+    .question{
+      font-weight: bold;
+    }
+    .answer{
+      padding-left: 5px;
+      display: none;
+    }
+
+    .question:hover{
+      cursor: hand;
+      cursor: pointer;
+      color: $dark_blue;
+    }
+    .question.active{
+      color: $dark_blue;
+    }
+    .no-results{
+      font-style: italic;
+      font-size: 1.1em;
+      padding: 0 20px;
+    }
+  }
 }
 
 /*----------------------------------------------------------------------------*\
     $CONTACT
 \*----------------------------------------------------------------------------*/
 .contact {
-  background: #fff url('../images/site_contact.jpg') top center scroll repeat-x;
-  height: 1034px;
+  background-image: url('../images/site_contact.jpg');
+  background-position:  top center;
+  background-repeat: repeat-x;
+  background-color: #fff;
+  padding-bottom: 80px;
   color: #fff;
   font-family: 'Ubuntu', sans-serif;
   font-weight: bold;
@@ -454,6 +578,7 @@ section {
     clear: both;
     width: 100%;
     padding: 7px;
+    color: #000;
   }
 
   textarea {
@@ -475,6 +600,7 @@ section {
     $FOOTER
 \*----------------------------------------------------------------------------*/
 footer {
+  font-family: 'Ubuntu', sans-serif;
   background-color: $black;
   padding: 40px 0;
   float: left;
@@ -485,38 +611,29 @@ footer {
     height: 70px;
   }
 
-  .logo,
   .links {
-    float: left;
-  }
-
-  .links {
-    margin-left: 50px;
-
-     ul {
+    ul {
       float: left;
-      padding-left: 0;
-      margin-left: 80px;
+      padding: 0;
+      margin: 0;
 
       &:first-child {
         margin-left: 0;
       }
-     }
+    }
 
     li {
-        font-family: 'MavenPro', sans-serif;
-        font-weight: bold;
-        margin: 10px 0;
-        list-style: none;
+      font-weight: bold;
+      margin: 10px 0;
+      list-style: none;
 
       p {
-        font-size: 18px;
+        font-size: 1.2em;
         color: $light_blue;
         margin-bottom: 20px;
       }
 
       a {
-        font-size: 12px;
         color: #fff;
         margin-bottom: 15px;
 
@@ -530,14 +647,6 @@ footer {
   .links,
   .appstore {
     margin-top: 40px;
-  }
-
-  .appstore {
-    float: right;
-
-    img:first-child {
-      margin-right: 15px;
-    }
   }
 
   .socials-links {
@@ -560,7 +669,7 @@ footer {
   }
 
   .legal {
-
+    margin-top: 20px;
     p {
       color: #fff;
       text-align: center;
@@ -575,23 +684,23 @@ footer {
   border: 1px solid $medium_gray;
   border-radius: 5px;
   background-color: $lighter_gray;
-  overflow: hidden;
-  width: calc(50% - 10px);
   box-sizing: border-box;
-  float: left;
   padding: 30px;
   color: $dark_gray;
   font-family: 'Ubuntu', sans-serif;
 
   .release {
-    width: 50%;
-    float: left;
     margin-bottom: 15px;
+
+    img {
+      max-width: 100%;
+    }
   }
 
   h4 {
     font-weight: bold;
     font-size: 24px;
+    margin-bottom: 20px;
   }
 
   p {
@@ -605,36 +714,187 @@ footer {
     $EXTRA_SMALL
 \*----------------------------------------------------------------------------*/
 @media screen and (max-width: 767px) {
-  h3 {
 
+  body.home{
+    padding-top: 96px;
+  }
+  .header__tagline{
+    text-align: center;
+    letter-spacing: 0.2em;
+  }
+  #login{
+    .title{
+      text-align: center;
+      small{
+        font-size: 1.2em;
+        tet-align: center;
+        float: none;
+        display: block;
+      }
+      h3{
+        tet-align: center;
+        float: none;
+        display: block;
+      }
+    }
+  }
+    
+  .intro {
+    background: #fff url('../images/site_intro_small.png') top center no-repeat;
+    background-size: 100% auto;
+    height: auto;
+
+    .text {
+      margin-top: 260px;
+      font-size: 1.1em;
+      text-align: center;
+    }
+
+    h4 {
+      font-size: 2em;
+    }
+    .baixar{
+      margin-bottom: 40px;
+    }
+  }
+  .login-menu{
+    display: inline;
+    margin: 5px;
+  }
+
+  h3 {
+    font-size: 2em;
+    float: none;
+    display: block;
     small {
+      float: none;
+      display: block;
+      text-align: center;
       border: none;
       clear: both;
       margin: 10px 0;
       padding: 0;
-      font-size: 24px;
-      line-height: 30px;
+      line-height: 1em;
       margin-bottom: 30px;
+      max-width: 100%;
+    }
+    span{
+      float: none;
+      text-align: center;
     }
   }
 
-  .intro {
+  .nav > li{
+    margin: 0;
+    width: 100%;
+  }
 
-    .text {
-      font-size: 18px;
-    }
+  .nav > li > a{
+    font-size: 0.8em;
+    width: 100%;
+    padding-top: 5px;
+    padding-bottom: 5px;
+    text-transform: uppercase;
+  }
 
-    h4 {
-      font-size: 36px;
-    }
+  .navbar-nav{
+    margin: 0;
+  }
+
+  .navbar-collapse{
+    padding-left: 0px;
+    padding-right: 0px;
   }
 
   .features {
-
+    min-height: 1100px;
+    h3{
+      margin: 20px auto;
+      text-align: center;
+      small{
+        display: none;
+      }
+    }
     .item {
       background-color: red;
       width: 100%;
     }
+    .list{
+      .col-xs-6{
+        padding-left: 2px;
+        padding-right: 2px;
+        .list__item{
+          padding: 5px;
+          height: 150px;
+        }
+      }
+    }
+  }
+  
+  .versions {
+    background-image: none;
+    h3{
+      margin: 10px;
+      text-align: center;
+      span{
+        text-align: center;
+      }
+      small{
+        text-align: center;
+      }
+    }
+    .carousel-inner{
+      border: 1px solid #e0e0e0;
+      border-radius: 10px;
+      .item.premium{
+        background: url("/images/bg_slide_premium.png") no-repeat;
+        background-size: 150% auto;
+        background-position: 5% 5%;
+      }
+      .item.free{
+        background: url("/images/bg_slide.png") no-repeat;
+        background-size: 150% auto;
+        background-position: 5% 5%;
+      }
+      .item{
+        font-size: 0.8em;
+        text-align: center;
+        img{
+          width: 50%;
+          margin: 100px auto;
+          margin-left: 10px;
+        }
+        .btn{
+          margin: 0 auto 20px 0;
+        }
+        ul{
+          list-style-type: none;
+          p{
+            margin: 10px 0;
+          }
+        }
+      }
+    }
+
+    .carousel-inner > .item{
+      padding: 0 40px;
+      font-size: 0.8em;
+    }
+  }
+
+  .item__front,
+  .item__back {
+    font-size: 1em;
+  }
+  .item__front {
+    .icon {
+      margin-bottom: 5px;
+      margin-top: 10px;
+    }
+  }
+  .item__back {
+    font-size: 0.8em;
+    line-height: 1em;
   }
 
   footer {
@@ -646,12 +906,52 @@ footer {
       img {
         clear: both;
         margin-bottom: 10px;
+        display: inline;
       }
+    }
+    .links{
+      text-align: center;
+      ul{
+        float: none;
+      }
+    }
+  }
+  .help{
+    h3{
+      text-align: center;
+    }
+    .multi-column{
+      -webkit-column-count: 1;
+      -moz-column-count: 1;
+      column-count: 1;
+    }
+  }
+  .contact{
+    h3{
+      text-align: center;
     }
   }
 }
 
-
+@media screen and (min-width: 459px) and (max-width: 559px) {
+  .intro {
+    .text {
+      margin-top: 350px;
+    }
+  }
+}
+@media screen and (min-width: 560px) and (max-width: 766px) {
+  .intro {
+    .text {
+      margin-top: 480px;
+    }
+  }
+  .slide {
+    .text {
+      padding-top: 80px;
+    }
+  }
+}
 /*----------------------------------------------------------------------------*\
     $SMALL
 \*----------------------------------------------------------------------------*/
@@ -663,12 +963,22 @@ footer {
       clear: both;
       margin: 10px 0;
       padding: 0;
-      font-size: 24px;
-      line-height: 30px;
-      margin-bottom: 30px;
     }
   }
 
+  .menu li{
+    margin: 0;
+  }
+
+  .nav > li > a{
+    font-size: 0.9em;
+    padding-left: 5px;
+    padding-right: 5px;
+  }
+  .header_dark .header__tagline {
+    font-size: 11px;
+    letter-spacing: 3px;
+  }
   .intro {
 
     .text {
@@ -684,6 +994,12 @@ footer {
 
     .item {
       background-color: green;
+    }
+  }
+  .versions{
+    .carousel-inner{
+      width: 80%;
+      margin: 0 auto;
     }
   }
 
@@ -710,6 +1026,16 @@ footer {
       font-size: 48px;
     }
   }
+
+  .menu li{
+    margin: 0;
+  }
+
+  .nav > li > a{
+    padding-left: 10px;
+    padding-right: 10px;
+  }
+  
   .features {
 
     .item {
@@ -717,6 +1043,12 @@ footer {
     }
   }
 
+  .versions{
+    .carousel-inner{
+      width: 80%;
+      margin: 0 auto;
+    }
+  }
   footer {
 
     .appstore {
@@ -734,5 +1066,11 @@ footer {
     $LARGE
 \*----------------------------------------------------------------------------*/
 @media screen and (min-width: 1200px) {
-
+  .header_dark{
+    .system {
+      .login {
+        padding: 10px 30px;
+      }
+    }
+  }
 }
